hphp/test/zend/good/Zend/tests/access_modifiers_001.php.expectf
Fatal error: Methods cannot have multiple visibility modifiers except for `protected internal`. in %s/access_modifiers_001.php on line 4
